2003-09-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* stepmake/GNUmakefile.in: remove nested stepmake packaging stuff.

	* VERSION: remove

	* scripts/*2ly.py: update <> syntax

2003-09-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/chord-name-engraver.cc (process_music): add origin for
	chord name.

	* input/regression/chord-name-exceptions.ly (theMusic): add base too.

	* scm/chord-ignatzek-names.scm (ignatzek-chord-names): bugfix: do
	bass notes for exceptions too.

	* scm/define-grobs.scm (all-grob-descriptions): rename
	HaraKiriVerticalGroup to RemoveEmptyVerticalGroup

	* scm/define-grob-properties.scm (remove-first): add remove-first
	property for orchestral scores.

	* Documentation/user/*.itely: switch <<>> and <> 

	* lily/glissando-engraver.cc (process_music): bugfix: move line to
	last_line only once. This fixes the two consecutive glissandi problem.

2003-09-09  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/vaticana-ligature-engraver.cc: bugfix: fixed programming
	error message "flexa-width undefined"

	* lily/vaticana-ligature-engraver.cc, lily/gregorian-ligature.cc,
	lily/include/gregorian-ligature.hh: print warning when ignoring
	head prefixes on flexa shapes

	* lily/vaticana-ligature-engraver.cc: bugfix: always add an extra
	space before a series of inclinatum heads

	* lily/vaticana-ligature-engraver.cc, lily/gregorian-ligature.cc,
	lily/include/gregorian-ligature.hh: junked AFTER_VIRGA; small
	cleanups

	* mf/parmesan-custodes.mf: redesigned custos; fixed stem length
	and char_box

2003-09-08  Juergen Reuter  <reuter@ipd.uka.de>

	* input/regression/breathing-sign.ly: tiny fixes

	* lily/mensural-ligature.cc: renamed stem->cauda/join to avoid
	semantical collision with vaticana ligatures

	* lily/vaticana-ligature-engraver.cc, lily/vaticana-ligature.cc,
	scm/define-grob-properties.scm: bugfix: semantics of delta_pitch
	now consistent with mensural ligatures

	* lily/vaticana-ligature-engraver.cc, lily/vaticana-ligature.cc,