@@ -4,16 +4,10 @@ import sys
 import getopt
 
 
-vf = 'VERSION'
-if sys.argv[1:]:
-	vf = sys.argv[1]
-
-f = open (vf)
-ls = f.readlines ()
 mypatch = 0
 defs = []
-for a in sys.argv[1:]
-	m  = re.search ('([^ =]*)=([^ \t]*)[ \t]*\n', a)
+for a in sys.argv[1:]:
+	m  = re.search ('([^ =]+)=([^ \t]*)', a)
 	if m:
 		defs.append ((m.group(1), m.group(2)))
 
@@ -34,7 +28,6 @@ for d in defs:
 	
 	sys.stdout.write ('#define %s "%s"\n' % d)
 	
-
 if ('MY_PATCH_LEVEL', '') in defs:
 	sys.stdout.write ('#define NO_MY_PATCHLEVEL')
 
