@@ -99,8 +99,8 @@ $(outdir)/version.hh: $(config_make)
 	$(PYTHON) $(step-bindir)/make-version.py PACKAGE_NAME=$(PACKAGE_NAME) \
 		MAJOR_VERSION=$(MAJOR_VERSION) \
 		MINOR_VERSION=$(MINOR_VERSION) \
-		MY_PATCH_LEVEL=$(MY_PATCH_LEVEL) \
 		PATCH_LEVEL=$(PATCH_LEVEL) \
+		MY_PATCH_LEVEL=$(MY_PATCH_LEVEL) \
 		> $@
 
 $(outdir)/config.h: $(config_h)
