@@ -1,5 +1,8 @@
 2003-09-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
+	* scripts/lilypond.py (global_latex_preamble): only set
+	twosideshift if 'twoside' is in latexoptions 
+
 	* stepmake/GNUmakefile.in: remove nested stepmake packaging stuff.
 
 	* VERSION: remove
